--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ bower_components
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
+build
 
 # Dependency directories
 node_modules/
@@ -59,6 +60,10 @@ typings/
 .rts2_cache_es/
 .rts2_cache_umd/
 
+# dependencies
+*.pnp
+*.pnp.js
+
 # Optional REPL history
 .node_repl_history
 
@@ -72,6 +77,10 @@ typings/
 *.env
 .env
 .env.test
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -107,5 +116,6 @@ dist
 # VSCode stuff
 *.code-workspace
 
-# Filesystem metadata
+# misc
 .directory
+.DS_Store
