--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,9 @@
-name: Test & Deploy on Heroku
+name: Run tests
 
-on:
-  push:
-    branches:
-      - main
+on: [pull_request]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     
     strategy:
@@ -28,10 +25,3 @@ jobs:
       - name: Backend testing
         working-directory: ./backend
         run: npm install && npm install -D && npm test
-        
-      - uses: akhileshns/heroku-deploy@v3.6.8
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "coffaine-sales"
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
-          usedocker: true
