--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
         "start": "node -r dotenv/config source/boot.js dotenv_config_path=env/devel.env",
         "start:prod": "node -r dotenv/config source/boot.js dotenv_config_path=env/prod.env",
         "test": "jest ./test",
-        "coverage": "nyc npm test"
+        "coverage": "nyc npm test",
+        "swagger": "node source/swagger-gen.js"
     },
     "author": "amg98@github.com, a8081@github.com",
     "license": "MIT",
@@ -17,6 +18,7 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.9",
+        "express-swagger-generator": "^1.1.17",
         "jest": "^26.6.3",
         "nyc": "^15.1.0"
     }
