--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
         "@types/express": "^4.17.9",
         "express-swagger-generator": "^1.1.17",
         "jest": "^26.6.3",
-        "nyc": "^15.1.0"
+        "nyc": "^15.1.0",
+        "supertest": "^6.0.1"
     }
 }
