--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.9",
+        "@types/jest": "^26.0.18",
         "express-swagger-generator": "^1.1.17",
         "jest": "^26.6.3",
         "nyc": "^15.1.0",
         "supertest": "^6.0.1"
+    },
+    "jest": {
+        "globalSetup": "./test/setup.js"
     }
 }
