--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "start": "node -r dotenv/config source/boot.js dotenv_config_path=env/devel.env",
         "start:prod": "node -r dotenv/config source/boot.js dotenv_config_path=env/prod.env",
         "test": "jest ./test",
-        "coverage": "nyc npm test"
+        "coverage": "npm test -- --coverage"
     },
     "author": "amg98@github.com, a8081@github.com",
     "license": "MIT",
@@ -19,11 +19,10 @@
         "@types/express": "^4.17.9",
         "@types/jest": "^26.0.18",
         "express-swagger-generator": "^1.1.17",
-        "jest": "^26.6.3",
-        "nyc": "^15.1.0",
-        "supertest": "^6.0.1"
+        "jest": "^26.6.3"
     },
     "jest": {
-        "globalSetup": "./test/setup.js"
+        "globalSetup": "./test/setup.js",
+        "collectCoverageFrom": [ "./source/**/*.js" ]
     }
 }
