--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
         "@types/express": "^4.17.9",
         "@types/jest": "^26.0.18",
         "express-swagger-generator": "^1.1.17",
-        "jest": "^26.6.3"
+        "jest": "^26.6.3",
+        "supertest": "^6.0.1"
     },
     "jest": {
         "globalSetup": "./test/setup.js",
-        "collectCoverageFrom": [ "./source/**/*.js" ]
+        "collectCoverageFrom": [
+            "./source/**/*.js"
+        ]
     }
 }
