--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "devDependencies": {
         "@types/express": "^4.17.9",
         "@types/jest": "^26.0.18",
+        "@types/supertest": "^2.0.10",
         "axios": "^0.21.0",
-        "jest": "^26.6.3"
+        "jest": "^26.6.3",
+        "supertest": "^6.0.1"
     },
     "jest": {
         "globalSetup": "./test/setup.js",
+        "globalTeardown": "./test/teardown.js",
         "collectCoverageFrom": [
             "./source/**/*.js"
         ],
