--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-swagger-generator": "^1.1.17",
+        "hystrix-dashboard": "^1.0.3",
+        "hystrixjs": "^0.2.0",
         "mongoose": "^5.11.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.9",
+        "@types/hystrixjs": "^0.2.1",
         "@types/jest": "^26.0.18",
         "@types/supertest": "^2.0.10",
         "axios": "^0.21.0",
