--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-swagger-generator": "^1.1.17",
-        "hystrix-dashboard": "^1.0.3",
         "hystrixjs": "^0.2.0",
-        "mongoose": "^5.11.1"
+        "mongoose": "^5.11.1",
+        "rxjs": "^5.0.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.9",
