--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-swagger-generator": "^1.1.17",
+        "hystrix-dashboard": "^1.0.3",
         "hystrixjs": "^0.2.0",
         "mongoose": "^5.11.1",
         "rxjs": "^5.0.0"
