--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "MIT",
     "dependencies": {
         "axios": "^0.21.1",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-swagger-generator": "^1.1.17",
@@ -21,6 +22,7 @@
         "rxjs": "^5.0.0"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.9",
         "@types/express": "^4.17.9",
         "@types/hystrixjs": "^0.2.1",
         "@types/jest": "^26.0.18",
